--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="informacion">
     <header>
         <div class="container-fluid">
             <div class="row">
@@ -24,14 +24,10 @@
         </div>
     </header>
     <main>
-        <div class="d-flex justify-content-center"><h1 class="titulo">¿Qué es feybrial?</h1></div>
+        <h1 class="titulo2">¿Qué es Feybrial?</h1>
         <div class="contenedor">
-            <div class="texto">
-                <p>Feybrial es un emocionante juego de aventura y rol de vóxeles. Está inspirado en juegos como Cube World, Veloren, The legends of Zelda. Utiliza gráficos, música y otros activos originales creados por su comunidad. Al estar impulsada contribuyentes, su comunidad de desarrollo y su comunidad de usuarios es la misma: desarrolladores, jugadores, artistas y músicos se unen para desarrollar el juego.</p>
-            </div>
-            <div class="texto">
-                <p>El desarrollo de Feybrial comenzó a mediados de 2022. Hay alrededor de 20 desarrolladores activos trabajando en el juego, con otros 18 artistas, escritores y compositores trabajando también. Más de 120 personas han contribuido al proyecto. Feybrial actualmente tiene compilaciones para Windows, Linux y MacOS.</p>
-            </div>
+            <p class="texto">Feybrial es un emocionante juego de aventura y rol de vóxeles. Está inspirado en juegos como Cube World, Veloren, The legends of Zelda. Utiliza gráficos, música y otros activos originales creados por su comunidad. Al estar impulsada contribuyentes, su comunidad de desarrollo y su comunidad de usuarios es la misma: desarrolladores, jugadores, artistas y músicos se unen para desarrollar el juego.</p>
+            <p class="texto">El desarrollo de Feybrial comenzó a mediados de 2022. Hay alrededor de 20 desarrolladores activos trabajando en el juego, con otros 18 artistas, escritores y compositores trabajando también. Más de 120 personas han contribuido al proyecto. Feybrial actualmente tiene compilaciones para Windows, Linux y MacOS.</p>
         </div>
     </main>
     <footer class="pie">
