Cambios en el css

--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -14,20 +14,20 @@
         <div class="container-fluid">
             <div class="row">
                 <ul class="nav nav-pills justify-content-center menubar">
-                    <li class="nav-item"><a class="nav-link" href="../prueba.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/informacion.html">Información</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/descarga.html">Descarga</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/novedades.html">Novedades</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Ayuda</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../pages/apoyanos.html">Apóyanos</a>
+                    <li class="nav-item"><a class="nav-link" href="../pages/pagos.html">Apóyanos</a>
                 </ul>
             </div>
         </div>
     </header>
     <main>
-        <div style="display: flex; background-color: #081849b0; width: 100%;" class="container-fluid">
+        <div class="container-fluid, logobar">
             <img class="logo" src="../assets/logo.png" alt="Error al cargar la imagen">
-            <div style="display: flex; justify-content: space-between; margin-top: 10px;" class="container-fluid">
+            <div class="container-fluid, pregunta">
                 <h2>Eterno despertar</h2>
                 <h2>Ayuda</h2>
             </div>
@@ -37,11 +37,11 @@
             <div class="row">
         </div>
         <div class="list-group">
-            <a href="#" style="background-color: #15b3bb97; color: aliceblue; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" class="list-group-item list-group-item-action">¿Tienes problemas con el inicio de sesión?</a>
-            <a href="#" style="background-color: #15b3bb97; color: aliceblue; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" class="list-group-item list-group-item-action list-group-item-primary">¿Tienes problemas con la descarga del videojuego?</a>
-            <a href="#" style="background-color: #15b3bb97; color: aliceblue; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" class="list-group-item list-group-item-action list-group-item-secondary">¿Tienes inconvenientes con la plataforma?</a>
-            <a href="#" style="background-color: #15b3bb97; color: aliceblue; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" class="list-group-item list-group-item-action list-group-item-success">¿Tienes inconvenientes con tu cuenta?</a>
-            <a href="#" style="background-color: #15b3bb97; color: aliceblue; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" class="list-group-item list-group-item-action list-group-item-danger">¿Tienes problemas con la opción de “Apoyarnos”?</a>
+            <a href="#" class="list-group-item list-group-item-action, problemas">¿Tienes problemas con el inicio de sesión?</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-primary, problemas">¿Tienes problemas con la descarga del videojuego?</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary, problemas">¿Tienes inconvenientes con la plataforma?</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-success, problemas">¿Tienes inconvenientes con tu cuenta?</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-danger, problemas">¿Tienes problemas con la opción de “Apoyarnos”?</a>
         </div>
     </main>
     <footer>
