--- a/pages/descarga.html
+++ b/pages/descarga.html
@@ -14,12 +14,12 @@
         <div class="container-fluid">
             <div class="row">
                 <ul class="nav nav-pills justify-content-center menubar">
-                    <li class="nav-item"><a class="nav-link" href="../prueba.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/informacion.html">Información</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Descarga</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/novedades.html">Novedades</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/ayuda.html">Ayuda</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../pages/apoyanos.html">Apóyanos</a>
+                    <li class="nav-item"><a class="nav-link" href="../pages/pagos.html">Apóyanos</a>
                 </ul>
             </div>
         </div>
@@ -30,18 +30,18 @@
             <img class="logo" src="../assets/logo.png" alt="Error al cargar la imagen">
         </div>
         <ul class="list-group">
-            <li style="color: aliceblue; background-color: rgb(66, 112, 113);" class="list-group-item">Requerimientos mínimos</li>
-            <li style="color: black; background-color: #76c7b9;" class="list-group-item list-group-item-primary">GPU compatible con Vulkan, Metal o DirectX 11.2+</li>
-            <li style="color: black; background-color: #76c7b9;" class="list-group-item list-group-item-secondary">Ram de 4GB</li>
-            <li style="color: black; background-color: #76c7b9;" class="list-group-item list-group-item-success">CPU multinúcleo</li>
-            <li style="color: black; background-color: #76c7b9;" class="list-group-item list-group-item-danger">2 GB de espacio libre en el disco</li>
+            <li class="list-group-item, requerimientos">Requerimientos mínimos</li>
+            <li class="list-group-item list-group-item-primary, requerimientos-minimos">GPU compatible con Vulkan, Metal o DirectX 11.2+</li>
+            <li class="list-group-item list-group-item-secondary, requerimientos-minimos">Ram de 4GB</li>
+            <li class="list-group-item list-group-item-success, requerimientos-minimos">CPU multinúcleo</li>
+            <li class="list-group-item list-group-item-danger, requerimientos-minimos">2 GB de espacio libre en el disco</li>
         </ul>
         <div class="list-group">
-            <a href="#" style="color: aliceblue; background-color: rgb(66, 112, 113);" class="list-group-item list-group-item-action">Descarga el launcher aquí</a>
-            <a href="#" style="color: #0b2371; background-color: #76c7b9;" class="list-group-item list-group-item-action list-group-item-primary">Windows</a>
-            <a href="#" style="color: #0b2371; background-color: #76c7b9;" class="list-group-item list-group-item-action list-group-item-secondary">MacOS Intel</a>
-            <a href="#" style="color: #0b2371; background-color: #76c7b9;" class="list-group-item list-group-item-action list-group-item-success">MacOS ARM (M1/M2)</a>
-            <a href="#" style="color: #0b2371; background-color: #76c7b9;" class="list-group-item list-group-item-action list-group-item-dark">Linux</a>
+            <a href="#" class="list-group-item list-group-item-action, requerimientos">Descarga el launcher aquí</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-primary, descarga">Windows</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary, descarga">MacOS Intel</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-success, descarga">MacOS ARM (M1/M2)</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark, descarga">Linux</a>
         </div>
     </main>
     <footer class="pie">
