--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -14,12 +14,12 @@
         <div class="container-fluid">
             <div class="row">
                 <ul class="nav nav-pills justify-content-center menubar">
-                    <li class="nav-item"><a class="nav-link" href="../prueba.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Información</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/descarga.html">Descarga</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/novedades.html">Novedades</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/ayuda.html">Ayuda</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../pages/apoyanos.html">Apóyanos</a>
+                    <li class="nav-item"><a class="nav-link" href="../pages/pagos.html">Apóyanos</a>
                 </ul>
         </div>
     </header>
