--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -14,22 +14,22 @@
         <div class="container-fluid">
             <div class="row">
                 <ul class="nav nav-pills justify-content-center menubar">
-                    <li class="nav-item"><a class="nav-link" href="../prueba.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/informacion.html">Información</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/descarga.html">Descarga</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Novedades</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/ayuda.html">Ayuda</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../pages/apoyanos.html">Apóyanos</a>
+                    <li class="nav-item"><a class="nav-link" href="../pages/pagos.html">Apóyanos</a>
                 </ul>
             </div>
         </div>
     </header>
     <main>
-        <div class="container-fluid" style="display: flex; gap: 10px; margin-top: 10px; justify-content: center;">
+        <div class="container-fluid, novedades">
             <img src="../assets/imagen5.jpeg" class="img-fluid" alt="error no se pudo cargar la imagen correctamente">
             <p class="texto">Actualización 1.17.2 Estas semanas, volvemos a presentar muchas actividades en curso en el proyecto Feybrial. Hemos añadido nuevas mazmorras y corregido errores visuales de la versión 1.17.1</p>
         </div>
-        <div class="container-fluid" style="display: flex; gap: 10px; margin-top: 10px; justify-content: center;">
+        <div class="container-fluid, novedades">
             <img src="../assets/imagen6.jpeg" class="img-fluid" alt="error no se pudo cargar la imagen correctamente">
             <p class="texto">Actualización 1.17.1 Estas semanas os traemos la versión más nueva de Feybrial y una de las actualizaciones con más contenido añadido, desde nuevas mazmorras, enemigos, una nueva raza jugable, nuevas armas y mucho más, lamentos que se haya retrasado la salida de esta actualización, sin embargo, ahora pueden disfrutarla sin reparos.</p>
         </div>
