--- a/pages/pagos.html
+++ b/pages/pagos.html
@@ -15,51 +15,51 @@
         <div class="container-fluid">
             <div class="row">
                 <ul class="nav nav-pills justify-content-center menubar">
-                    <li class="nav-item"><a class="nav-link" href="../prueba.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/informacion.html">Información</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/descarga.html">Descarga</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/novedades.html">Novedades</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/ayuda.html">Ayuda</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../pages/apoyanos.html">Apóyanos</a>
+                    <li class="nav-item"><a class="nav-link" href="../pages/pagos.html">Apóyanos</a>
                 </ul>
             </div>
         </div>
     </header>
     <main>
         <h1 class="titulo">Contribuciones Financieras</h1>
-        <div style="display: flex; flex-wrap: wrap; justify-content: space-around;" class="container-fluid">
-            <div class="card bg-light mb-3" style="max-width: 18rem; color: black; border-color: black; border-radius: 35px;">
-                <div style="background-color: #071952e4; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; border-radius: 33px 33px 0px 0px; color: aliceblue;" class="card-header">Aportación recurrente</div>
-                <div style="background-color: #76c7b981; border-radius: 0px 0px 33px 33px;" class="card-body">
+        <div class="container-fluid, contenedor-cards">
+            <div class="card bg-light mb-3, card-pagos">
+                <div class="card-header">Aportación recurrente</div>
+                <div class="card-body">
                     <h5 class="card-title">Backer</h5>
                     <p class="card-text">Hazte promotor por 5.00$ al mes y apóyanos</p>
                     <p>Comienza desde</p>
                     <h2>5 %USD/mes</h2>
                     <div>
-                        <a href="pagos.html" class="btn btn-primary btn-lg active" style="background-color: cadetblue; border-color: black;" role="button" aria-pressed="true">Contribuir</a>
+                        <a href="#" class="btn btn-primary btn-lg active" style="background-color: cadetblue; border-color: black;" role="button" aria-pressed="true">Contribuir</a>
                     </div>
                 </div>
             </div>
-            <div class="card bg-light mb-3" style="max-width: 18rem; color: black; border-color: black; border-radius: 35px;">
-                <div style="background-color: #071952e4; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; border-radius: 33px 33px 0px 0px;  color: aliceblue;" class="card-header">Aportación recurrente</div>
-                <div style="background-color: #76c7b981; border-radius: 0px 0px 33px 33px;" class="card-body">
+            <div class="card bg-light mb-3, card-pagos">
+                <div class="card-header">Aportación recurrente</div>
+                <div class="card-body">
                     <h5 class="card-title">Sponsor</h5>
                     <p class="card-text">Hazte patrocinador por 25.00$ al mes y apóyanos</p>
                     <p>Comienza desde</p>
                     <h2>25 %USD/mes</h2>
                     <div>
-                        <a href="pagos.html" class="btn btn-primary btn-lg active" style="background-color: cadetblue; border-color: black;" role="button" aria-pressed="true">Contribuir</a>
+                        <a href="#" class="btn btn-primary btn-lg active" style="background-color: cadetblue; border-color: black;" role="button" aria-pressed="true">Contribuir</a>
                     </div>
                 </div>
             </div>
-            <div class="card bg-light mb-3" style="max-width: 18rem; color: black; border-color: black; border-radius: 35px;">
-                <div style="background-color: #071952e4; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; border-radius: 33px 33px 0px 0px; color: aliceblue;" class="card-header">Aportación personalizada</div>
-                    <div style="background-color: #76c7b981; border-radius: 0px 0px 33px 33px;" class="card-body">
+            <div class="card bg-light mb-3, card-pagos">
+                <div class="card-header">Aportación personalizada</div>
+                    <div class="card-body">
                     <h5 class="card-title">Donación</h5>
                     <p class="card-text">Realiza un pago único o una contribución recurrente</p>
                     <p>Comienza desde</p>
                     <div>
-                        <a href="pagos.html" class="btn btn-primary btn-lg active" style="background-color: cadetblue; border-color: black;" role="button" aria-pressed="true">Contribuir</a>
+                        <a href="#" class="btn btn-primary btn-lg active" style="background-color: cadetblue; border-color: black;" role="button" aria-pressed="true">Contribuir</a>
                     </div>
                 </div>
             </div>
