--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@ https://getbootstrap.com/docs/4.0/getting-started/introduction/
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba</title>
+    <meta name="keywords" content="Feybrial, juego de pixeles, mundo abierto">
+    <meta name="description" content="Feybrial es un increible videojuego de mundo abierto con distintas razas y clases">
+    <meta name="author" content="Mateo Bosco">
+    <meta name="copyrigth" content="Feybrial">
+    <meta property="og:title" content="Feybrial">
+    <meta property="og:description" content="Inversivo juego de pixeles con mundo abierto">
+    <meta property="og:locate" content="Argentina">
+    <title>Feybrial - Inicio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
@@ -22,7 +31,7 @@ https://getbootstrap.com/docs/4.0/getting-started/introduction/
                 <li class="nav-item"><a class="nav-link" href="pages/descarga.html">Descarga</a></li>
                 <li class="nav-item"><a class="nav-link" href="pages/novedades.html">Novedades</a></li>
                 <li class="nav-item"><a class="nav-link" href="pages/ayuda.html">Ayuda</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/apoyanos.html">Apóyanos</a>
+                <li class="nav-item"><a class="nav-link" href="pages/pagos.html">Apóyanos</a>
             </ul>
         </div>
     </div>
