--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Feybrial</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
@@ -24,7 +26,7 @@
         </div>
     </header>
     <main>
-        <h1 class="titulo2">¿Qué es Feybrial?</h1>
+        <h1 class="titulo2 animate__animated animate__flash">¿Qué es Feybrial?</h1>
         <div class="contenedor">
             <p class="texto">Feybrial es un emocionante juego de aventura y rol de vóxeles. Está inspirado en juegos como Cube World, Veloren, The legends of Zelda. Utiliza gráficos, música y otros activos originales creados por su comunidad. Al estar impulsada contribuyentes, su comunidad de desarrollo y su comunidad de usuarios es la misma: desarrolladores, jugadores, artistas y músicos se unen para desarrollar el juego.</p>
             <p class="texto">El desarrollo de Feybrial comenzó a mediados de 2022. Hay alrededor de 20 desarrolladores activos trabajando en el juego, con otros 18 artistas, escritores y compositores trabajando también. Más de 120 personas han contribuido al proyecto. Feybrial actualmente tiene compilaciones para Windows, Linux y MacOS.</p>
