--- a/pages/pagos.html
+++ b/pages/pagos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opciones de apoyo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
@@ -20,13 +21,13 @@
                     <li class="nav-item"><a class="nav-link" href="../pages/descarga.html">Descarga</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/novedades.html">Novedades</a></li>
                     <li class="nav-item"><a class="nav-link" href="../pages/ayuda.html">Ayuda</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../pages/pagos.html">Apóyanos</a>
+                    <li class="nav-item"><a class="nav-link" href="../pages/#.html">Apóyanos</a>
                 </ul>
             </div>
         </div>
     </header>
     <main>
-        <h1 class="titulo">Contribuciones Financieras</h1>
+        <h1 class="titulo3">Contribuciones Financieras</h1>
         <div class="container-fluid, contenedor-cards">
             <div class="card bg-light mb-3, card-pagos">
                 <div class="card-header">Aportación recurrente</div>
