Aplicación de CEO

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ https://getbootstrap.com/docs/4.0/getting-started/introduction/
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Feybrial, juego de pixeles, mundo abierto">
+    <meta name="keywords" content="Feybrial, juego de pixeles, mundo abierto, juego de fantasia, mundo cubico, juego de pixeles, nuevo cubeworld">
     <meta name="description" content="Feybrial es un increible videojuego de mundo abierto con distintas razas y clases">
     <meta name="author" content="Mateo Bosco">
     <meta name="copyrigth" content="Feybrial">
@@ -49,7 +49,6 @@ https://getbootstrap.com/docs/4.0/getting-started/introduction/
     </div>
     </main>
     <footer class="pie">
-
     </footer>
 </body>
 </html>
