--- a/pages/descarga.html
+++ b/pages/descarga.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Feybrial, juego de pixeles, mundo abierto, juego de fantasia, mundo cubico, juego de pixeles, nuevo cubeworld">
+    <meta name="description" content="Feybrial es un increible videojuego de mundo abierto con distintas razas y clases">
+    <meta name="author" content="Mateo Bosco">
+    <meta name="copyrigth" content="Feybrial">
+    <meta property="og:title" content="Feybrial">
+    <meta property="og:description" content="Descarga Feybrial de manera gratuita aquí">
+    <meta property="og:locate" content="Argentina">
     <title>Descargar Feybrial</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
