Finalización de seo

--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Mateo Bosco">
     <meta name="copyrigth" content="Feybrial">
     <meta property="og:title" content="Feybrial">
-    <meta property="og:description" content="Inversivo juego de pixeles con mundo abierto">
+    <meta property="og:description" content="¿Tienes problemas con Feybrial?">
     <meta property="og:locate" content="Argentina">
     <title>Ayuda al usuario</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
